document/k8s/acmeair-ms-fed.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: acme-auth
  name: acme-auth
spec:
  type: LoadBalancer
  ports:
  - port: 3010
    targetPort: 9443
  selector:
    app: acme-auth
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: acme-web
  name: acme-web
spec:
  type: LoadBalancer
  ports:
  - port: 3000
    targetPort: 9080
  selector:
    app: acme-web
