document/k8s/acmeair-ms.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: acmeair-mongo
  name: acmeair-mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    name: acmeair-mongo
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-auth
  labels:
    name: acmeair-auth
spec:
  ports:
    - port: 3010
      targetPort: 9443
      protocol: TCP
  selector:
    name: acmeair-auth
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-web
  labels:
    name: acmeair-web
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 9080
      protocol: TCP
  selector:
    name: acmeair-web
