document/k8s/acmeair-web.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: acmeair-mongo
  name: acmeair-mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    name: acmeair-mongo
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-web
  labels:
    name: acmeair-web
spec:
  type: NodePort
  ports:
    - port: 9080
      targetPort: 9080
      protocol: TCP
  selector:
    name: acmeair-web
