document/k8s/acmeair-ms-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: acmeair-ingress
  labels:
    name: acmeair-ingress
spec:
  tls:
  - hosts:
    -  mycluster-std.us-south.containers.mybluemix.net
    secretName: mycluster-std
  rules:
  - host:  mycluster-std.us-south.containers.mybluemix.net
    http:
      paths:
      - path: /
        backend:
          serviceName: acmeair-web
          servicePort: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: acmeair-mongo
  name: acmeair-mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    name: acmeair-mongo
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-auth
  labels:
    name: acmeair-auth
spec:
  ports:
    - port: 3010
      targetPort: 9443
      protocol: TCP
  selector:
    name: acmeair-auth
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-web
  labels:
    name: acmeair-web
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 9080
      protocol: TCP
  selector:
    name: acmeair-web
